fixed about z-index against mobile menu

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -49,7 +49,7 @@ Responsive CSS
 }
 
 .steptext{
-  color:#838a03;
+  color: var(--primary);
   font-weight: bold;
   font-size:18px;
   margin-right: 5px;
@@ -92,6 +92,12 @@ Responsive CSS
   }
   .getStarted li p{
     color:white !important;
+  }
+  .about-us-title{
+    margin-top:-80px;
+  }
+  .main-about-us{
+    margin-top:-20px;
   }
 
 }
@@ -2054,6 +2060,7 @@ p {
   padding-top: 120px;
   padding-bottom: 120px;
   z-index:0;
+  position: relative;
 }
 
 .about-img-box {
@@ -3769,7 +3776,8 @@ p {
 
 .footer-copyright {
   background-color: rgb(40, 40, 40);
-
+  z-index: 0;
+  position: relative;
   padding: 15px 0;
 }
 
